[gd_scene load_steps=10 format=1]

[ext_resource path="res://scripts/i.gd" type="Script" id=1]
[ext_resource path="res://assets/graphics/characters/i.png" type="Texture" id=2]
[ext_resource path="res://assets/graphics/characters/i/000.png" type="Texture" id=3]
[ext_resource path="res://assets/graphics/characters/i/001.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 10.0

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 0.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "walking",
"speed": 5.0
} ]

[sub_resource type="Animation" id=3]

resource/name = "blinking"
length = 0.2
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Rotate/AnimatedSprite:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=4]

resource/name = "default"
length = 0.01
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Rotate/AnimatedSprite:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="CapsuleShape2D" id=5]

custom_solver_bias = 0.0
radius = 13.5273
height = 37.1468

[node name="i" type="RigidBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 28 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 2
mass = 1.0
friction = 0.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 100
contact_monitor = true
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 1 )

[node name="Rotate" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Rotate"]

visibility/visible = false
transform/scale = Vector2( 4, 4 )
texture = ExtResource( 2 )
hframes = 2

[node name="AnimatedSprite" type="AnimatedSprite" parent="Rotate"]

transform/scale = Vector2( 4, 4 )
frames = SubResource( 2 )
animation = "idle"
playing = true

[node name="Shoot_Pos" type="Position2D" parent="Rotate"]

transform/pos = Vector2( 2, -20 )

[node name="Bullet_Container" type="Node" parent="."]

[node name="MovementCollisionShape" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 0, 28 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/blinking = SubResource( 3 )
anims/default = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="HitBox" type="Area2D" parent="."]

z/z = 1
input/pickable = true
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 2
collision/mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]

shape = SubResource( 5 )
trigger = true
_update_shape_index = 0

[node name="Timers" type="Node" parent="."]

[node name="Post_Damage_Immunity" type="Timer" parent="Timers"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="body_enter_shape" from="HitBox" to="." method="_on_HitBox_body_enter_shape"]

[connection signal="body_exit_shape" from="HitBox" to="." method="_on_HitBox_body_exit_shape"]

[connection signal="timeout" from="Timers/Post_Damage_Immunity" to="." method="_on_Post_Damage_Immunity_timeout"]


